force-app/main/default/objects/Contact_Shopify__c/Contact_Shopify__c.object-meta.xml
<CustomObject>
    <description>Mapping of Contacts to the Shopify Store for fast lookup.</description>
    <label>Contact Shopify</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Contact Shopify Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Shopify</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>