force-app/main/default/objects/Contact_Shopify__c/fields/Shop_URL__c.field-meta.xml
<CustomField>
    <fullName>Shop_URL__c</fullName>
    <description>Shopify Store URL</description>
    <label>Shop URL</label>
    <type>Url</type>
</CustomField>