force-app/main/default/objects/Contact_Shopify__c/fields/Shopify_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Shopify Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>