force-app/main/default/objects/Contact_Shopify__c/fields/Shopify_Store__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shopify Store</label>
    <referenceTo>Shopify__c</referenceTo>
    <relationshipLabel>Contact Shopify</relationshipLabel>
    <relationshipName>Contact_Shopify</relationshipName>
    <type>Lookup</type>
</CustomField>